--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "node api/proxy.js"
+  },
   "dependencies": {
     "chrome-aws-lambda": "^10.1.0",
     "chromedriver": "^138.0.3",
