--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chromedriver": "^138.0.3",
     "puppeteer": "^24.14.0",
     "puppeteer-core": "^10.4.0",
-    "selenium-webdriver": "^4.34.0"
+    "selenium-webdriver": "^4.34.0",
+    "express": "^4.18.2"
   }
 }
