--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
+  "name": "proxydex",
+  "version": "1.0.0",
+  "main": "api/proxy.js",
   "scripts": {
     "start": "node api/proxy.js",
-    "postinstall": "puppeteer install"
+    "postinstall": "node install-chrome.js"
   },
   "dependencies": {
-    "chrome-aws-lambda": "^10.1.0",
-    "chromedriver": "^138.0.3",
     "puppeteer": "^24.14.0",
-    "puppeteer-core": "^10.4.0",
-    "selenium-webdriver": "^4.34.0",
     "express": "^4.18.2"
   }
 }
