--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
   "main": "api/proxy.js",
   "scripts": {
     "start": "node api/proxy.js",
-    "scripts": {
-  "start": "node api/proxy.js",
-  "postinstall": "node node_modules/puppeteer/install.js"
-}
+    "postinstall": "node node_modules/puppeteer/install.js"
   },
   "dependencies": {
-    "puppeteer": "^24.14.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "puppeteer": "^24.14.0"
   }
 }
