--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "proxydex",
   "version": "1.0.0",
-  "main": "api/proxy.js",
   "scripts": {
     "start": "node api/proxy.js",
     "postinstall": "node node_modules/puppeteer/install.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "puppeteer": "21.3.8"
+    "puppeteer": "21.3.8",
+    "express": "^4.18.2"
   }
 }
