--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "start": "node api/proxy.js",
     "postinstall": "node node_modules/puppeteer/install.js"
   },
-  "dependencies": {
-    "puppeteer": "21.3.8",
-    "express": "^4.18.2"
-  }
+ "dependencies": {
+  "chrome-aws-lambda": "^10.1.0",
+  "puppeteer-core": "^10.4.0",
+  "express": "^4.18.2"
+}
 }
