--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "proxydex",
   "version": "1.0.0",
+  "main": "api/proxy.js",
   "scripts": {
-    "start": "node api/proxy.js",
-    "postinstall": "node node_modules/puppeteer/install.js"
+    "start": "node api/proxy.js"
   },
- "dependencies": {
-  "chrome-aws-lambda": "^10.1.0",
-  "puppeteer-core": "^10.4.0",
-  "express": "^4.18.2"
-}
+  "dependencies": {
+    "chrome-aws-lambda": "^10.1.0",
+    "puppeteer-core": "^10.4.0",
+    "express": "^4.18.2"
+  }
 }
