--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "proxydex",
-  "version": "1.0.0",
   "scripts": {
-    "start": "node api/proxy.js",
-    "postinstall": "node node_modules/puppeteer/install.js"
+    "start": "node api/proxy.js"
   },
   "dependencies": {
-    "puppeteer": "21.3.8",
-    "express": "^4.18.2"
+    "chrome-aws-lambda": "^10.1.0",
+    "puppeteer-core": "^24.14.0",
+    "express": "^4.19.2"
   }
 }
