--- a/package.json
+++ b/package.json
@@ -1,10 +1,25 @@
 {
+  "name": "proxydex",
+  "version": "1.0.0",
+  "description": "Proxy service with Puppeteer",
+  "main": "api/proxy.js",
   "scripts": {
-    "start": "node api/proxy.js"
+    "start": "node api/proxy.js",
+    "dev": "nodemon api/proxy.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install": "npm install --legacy-peer-deps",
+    "build": "echo \"Building...\" && npm run install",
+    "vercel-build": "npm run install && npm run build"
   },
   "dependencies": {
     "chrome-aws-lambda": "^10.1.0",
     "puppeteer-core": "^24.14.0",
     "express": "^4.19.2"
-  }
+  },
+  "engines": {
+    "node": ">=18.x"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
