--- a/package.json
+++ b/package.json
@@ -1,18 +1,10 @@
 {
-  "name": "proxydex",
-  "version": "1.0.0",
   "scripts": {
-    "start": "node api/proxy.js",
-    "vercel-build": "npm install --legacy-peer-deps && echo 'Build complete'",
-    "preinstall": "echo 'กำลังเตรียมติดตั้ง...'",
-    "postinstall": "echo 'ติดตั้งเสร็จสมบูรณ์'"
+    "start": "node api/proxy.js"
   },
   "dependencies": {
     "chrome-aws-lambda": "^10.1.0",
-    "puppeteer-core": "^10.4.0",
-    "express": "^4.19.2"
-  },
-  "engines": {
-    "node": ">=18.x"
+    "express": "^4.18.2",
+    "puppeteer-core": "^10.1.0"
   }
 }
